20040706 menu.h: get initial comment filename right (thanks, Marek).
20040706 acinclude.m4: distribute the Glib 1.2, Glib 2.x, GTK+ 1.2, GTK+
	 2.x and libxml2 autoconf macros.
20040707 z80/z80.pl,z80/tests/edb[3b].out: make INI, OUTI, INIR, OTIR and
	 the D variants timings consistent with the FAQ.
20040707 acinclude.m4: update SDL macros to latest upstream.
20040708 timer.c: modify timer calibration slightly (Darren).
20040708 ui/fb/fbkeyboard.c: update for new input layer (Darren).
20040708 ui/fb/fbui.c: add SIGTERM and SIGHUP handlers (Darren).
20040708 input.h,keyboard.c,keysyms.dat: map Tab to Extended Mode (Darren).
20040709 ui/gtk/debugger.c: shorten 'Writable?' and 'Contended?' headings.
20040709 configure.in: bump version number to 0.7.0pre1.
20040709 TAG: Release-0_7_0pre1
20040710 ui/fb/fbui.c: #include <errno.h> and <string.h>
20040715 ui/svga/svgajoystick.c: fix up for new input layer (Darren).
20040715 ChangeLog,README,man/fuse.1: more 0.7.0 doc updates.
20040715 pokefinder/pokefinder.c,ui/gtk/pokefinder.c: allow pokefinder to
	 search all 272K of normal RAM.
20040715 autogen.sh: copy auxiliary files rather than linking them.
20040715 man/fuse.1: Fix typo in pokefinder section.
20040716 rzx.c: change over to using the release RZX signing key.
20040716 configure.in: bump version number to 0.7.0.
20040716 gtkjoystick.c: add delete-event handler (thanks, Darren).
20040717 ui/fb/fbkeyboard.c: support Tab (Darren).
20040719 ui/fb/fbdisplay.c: check FRAMEBUFFER environment variable for
	 framebuffer device to use (Darren).
20040719 ui/fb/fbdisplay.c: hide/restore cursor on startup/exit (Darren).
20040719 ui/fb/fbdisplay.c: remove unused variables (Darren).
20040719 ui/xlib/xui.c: catch window close events (Darren).
20040720 ui.c: fix missing return value (Darren).
20040720 ui/fb/fbdisplay.c: generate palette dynamically (Darren).
20040720 widget/select.c: stop cursor at correct bottom limit (Darren).
20040720 rzx.c: change back to the RZX test key.